# Eval-Driven-LLM-Pipeline-Behavioral-Contract-System

./: .gitignore  README.md  render.yaml  setup.py
backend/: .env.example  pyproject.toml  railway.json  requirements.txt
backend/app/: __init__.py  cli.py  database.py  main.py  models.py
backend/app/api/: __init__.py  contracts.py  results.py  traces.py
backend/app/evaluators/: __init__.py  contract_loader.py  engine.py  pattern.py  semantic.py  structural.py
backend/app/llmtest/: __init__.py  evaluation.py  execution.py  loader.py  plugins.py  prompt_history.py  repair.py  reporting.py  schemas.py
backend/tests/: conftest.py  test_demo_api.py  test_engine.py  test_llmtest_cli.py  test_llmtest_execution.py  test_llmtest_repair.py  test_pattern.py  test_semantic.py  test_structural.py
cli/: __init__.py  auto_repair.py  cli.py  evaluators.py  execution.py  schema.py
cli/tests_example/: qa_tests.json
contracts/: example_contracts.yaml
demo/: inject_failures.py  rag_pipeline.py  requirements.txt  run_demo.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: Sidebar.jsx
frontend/src/pages/: Dashboard.jsx  RegressionPage.jsx  TracesPage.jsx
tests/: models.json  qa_tests.json  reasoning_tests.json  safety_tests.json
